# Numeros

./: BACKEND_REBUILD_PROMPT.md  CLAUDE.md  PROTOTYPE_TO_NATIVE_PROMPT.md
backend/: .env.example  API.md  CLAUDE.md  IMPLEMENTATION.md  Makefile  README.md  create_superuser.py  manage.py  pyproject.toml  requirements.txt  test_compatibility.py
backend/apps/astrology/: admin.py  apps.py  compatibility.py  engine.py  models.py
backend/apps/marketing/: admin.py  email.py  models.py  serializers.py  urls.py  views.py
backend/apps/marketing/migrations/: 0001_initial.py
backend/apps/marketing/templates/email/: numerology_results.html  numerology_results.txt
backend/apps/matching/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/matching/migrations/: 0001_initial.py  0002_initial.py
backend/apps/messaging/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/messaging/migrations/: 0001_initial.py  0002_initial.py
backend/apps/numerology/: admin.py  apps.py  compatibility.py  engine.py  forecast.py  models.py  urls.py  views.py
backend/apps/numerology/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_add_device_model.py
backend/apps/users/urls/: auth.py  profile.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/core/: pagination.py  permissions.py
backend/matching/: admin.py  compatibility.py  models.py  numerology.py  serializers.py  urls.py  views.py  zodiac.py
backend/matching/migrations/: 0001_initial.py  0002_initial.py
backend/numeros/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: CLAUDE.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
native/: .eslintrc.js  .gitignore  (+8 more)
(+116 files in other folders)
