[project]
name = "backend"
version = "0.1.0"
description = "numEros Django Backend - Numerology-based matching API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "channels>=4.0.0",
    "daphne>=4.0.0",
    "channels-redis>=4.1.0",
    "psycopg2-binary>=2.9.9",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "djangorestframework-simplejwt>=5.3.0",
    "django-allauth>=0.57.0",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "flake8>=6.1.0",
    "pytest>=7.4.3",
    "pytest-django>=4.7.0",
]
